# mojap-airflow-tools

./: README.md  pyproject.toml
.github/workflows/: poetry-pypi-release.yml  unit-tests.yml
mojap_airflow_tools/: __init__.py  constants.py  operators.py
tests/: test_operator.py  test_version.py
