[tool.poetry]
name = "mojap-airflow-tools"
version = "2.0.0"
description = "A few wrappers and tools to use Airflow on the Analytical Platform"
authors = ["MoJ Data Engineering"]

[tool.poetry.dependencies]
python = "^3.7"
apache-airflow = "^2.0.0"
apache-airflow-providers-cncf-kubernetes = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^3.9.2"
black = "^21.9b0"
toml = ""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
