[tool.poetry]
name = "mojap-airflow-tools"
version = "2.4.3.2"
description = "A few wrappers and tools to use Airflow on the Analytical Platform"
authors = ["MoJ Data Engineering"]

[tool.poetry.dependencies]
python = "^3.10"
apache-airflow = "2.4.3"
apache-airflow-providers-cncf-kubernetes = "4.4.0"
tenacity = "8.3.0"
packaging = "21.3"
pendulum = "2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^3.9.2"
black = "^21.9b0"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
